# django

./: .gitignore  db.sqlite3  db.sqlite3.~1~  pyproject.toml  requirements.txt
el_pagination/: decorators.py
mysite/: settings.py  urls.py
reviews/: admin.py  forms.py  models.py  urls.py  views.py  widgets.py
reviews/migrations/: 0001_initial.py  0002_alter_movie_ratingrt.py  0003_movie_tomatourl.py  0004_movie_audiencert.py
reviews/scripts/: imdbMovies.py
reviews/static/css/: movies.css
reviews/templates/admin/: search.html
reviews/templates/movies/: base.html  editMovie.html  editReview.html  filterModal.html  listMovies.html  listMovies_page.html  listObjects.html  movieCardComputer.html  movieCardMobile.html  navbar.html  needsediting.html  offline.html  queryModal.html  ratings.html  searchModal.html  searchMovieComputer.html  searchMovieMobile.html
reviews/templates/registration/: logout.html  rbase.html
reviews/templatetags/: my_tags.py
staticfiles/: staticfiles.json
staticfiles/css/: bootstrap-toggle.min.css.br  grt-youtube-popup.css  grt-youtube-popup.css.br  grt-youtube-popup.e066dbeac690.css  grt-youtube-popup.e066dbeac690.css.br  movies.css.br
staticfiles/el-pagination/js/: el-pagination.js.br
staticfiles/js/: bootstrap-toggle.min.7b0bdbe0da80.js.br  grt-youtube-popup.js  grt-youtube-popup.js.br  readmore.baf351291c11.js  readmore.js.br
